# gendoc

./: COVERAGE.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  coverage.sh  rustfmt.toml
src/: generator.rs  lib.rs  template.html
src/tests/: mod.rs
