[package]
name = "dmntk-gendoc"
version = "0.0.11"
authors = ["Dariusz Depta <dariusz.depta@engos.software>"]
description = "DMNTK | Documentation generator"
documentation = "https://docs.rs/dmntk-model"
repository = "https://github.com/dmntk/model.git"
license = "MIT"
edition = "2021"

[dependencies]
dmntk-examples = { path = "../examples" }
dmntk-model = { path = "../model" }