[package]
name = "dmntk-gendoc"
version = "0.0.20"
authors = ["Dariusz Depta <dariusz.depta@engos.software>"]
description = "DMNTK | Documentation generator"
documentation = "https://docs.rs/dmntk-model"
repository = "https://github.com/dmntk/model.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-examples = "0.0.20"
dmntk-model = "0.0.20"